--- a/style.css
+++ b/style.css
@@ -82,7 +82,8 @@ body{
 }
 button{
     color: rgb(255, 255, 255);
-    background-color: blueviolet;
+    background-color: #E6203E;
+    border: solid black 0.5px;
 }
 
 #conteudo{
@@ -94,6 +95,38 @@ img{
     align-content: center;
     margin-left: auto;
     margin-right: auto;
+}
+
+.imagemzada{
+    width: 547px;
+    height: 426px;
+    margin-top: 55px;
+}
+
+.opcaos{
+    margin-top: 55px;
+    display: flex;
+    flex-direction: column;
+}
+
+.options{
+    width: 103px;
+    height: 37px;
+    margin-bottom: 59px;
+}
+
+.optxt{
+    display: flex;
+    align-items: baseline;
+    
+}
+
+.optxt p{
+    margin-left: 7px;
+}
+
+section{
+    margin-top: 20px;
 }
 
 .inicial{
