corrigindo erros imagens

--- a/style.css
+++ b/style.css
@@ -43,7 +43,7 @@ table {
 }
 
 #back{
-    background-image: url(/imagens/meninopesadelo2.png);
+    background-image: url(imagens/meninopesadelo2.png);
     background-size: cover;
     background-position: center;
     background-repeat: no-repeat;
