Zoom de 150% em telas de grande porte

--- a/style.css
+++ b/style.css
@@ -204,6 +204,12 @@ section p{
     margin-left: 10px;
 }
 
+@media screen and (min-width: 1600px){
+    #corpo{
+        zoom: 150%;
+    }
+}
+
 @media screen and (max-width: 600px) {
     section{
         display: flex;
